# metldata

./: .description.md  .design.md  .gitignore  .mandatory_files  .mandatory_files_ignore  .pre-commit-config.yaml  .ruff.toml  .static_files  .static_files_ignore  Dockerfile  Dockerfile.debian  Dockerfile.dhi  README.md  config_schema.json  example_config.yaml  expected.yaml  observed.yaml  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev-common.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  test.json
.devcontainer/: .dev_config.yaml  Dockerfile  dev_install  dev_launcher  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yaml  check_config_docs.yaml  check_readme.yaml  dev_cd.yaml  pypi_publish.yaml  static_code_analysis.yaml  tests.yaml
.pyproject_generation/: pyproject_custom.toml  pyproject_template.toml
.readme_generation/: description.md  design.md
.template/: deprecated_files_ignore.txt  mandatory_files_ignore.txt  static_files_ignore.txt
docs/: metldata.builtin_transformations.common.assumptions.html  metldata.builtin_transformations.common.assumptions.path_assumptions.html  metldata.builtin_transformations.common.custom_types.html  metldata.builtin_transformations.common.html  metldata.builtin_transformations.common.path.html  metldata.builtin_transformations.common.path.path.html  metldata.builtin_transformations.common.path.path_elements.html  metldata.builtin_transformations.common.path.path_str.html  metldata.builtin_transformations.common.resolve_path.html  metldata.builtin_transformations.common.resolve_path.resolve_path_element_relations.html  metldata.builtin_transformations.common.resolve_path.resolve_path_properties.html  metldata.builtin_transformations.common.utils.html  metldata.builtin_transformations.delete_class.assumptions.html  metldata.builtin_transformations.delete_class.config.html  metldata.builtin_transformations.delete_class.data_transform.html  metldata.builtin_transformations.delete_class.html  metldata.builtin_transformations.delete_class.main.html  metldata.builtin_transformations.delete_class.model_transform.html  metldata.builtin_transformations.duplicate_class.assumptions.html  metldata.builtin_transformations.duplicate_class.config.html  metldata.builtin_transformations.duplicate_class.data_transform.html  metldata.builtin_transformations.duplicate_class.html  metldata.builtin_transformations.duplicate_class.main.html  metldata.builtin_transformations.duplicate_class.model_transform.html  metldata.builtin_transformations.html  metldata.builtin_transformations.null.config.html  metldata.builtin_transformations.null.html  metldata.builtin_transformations.null.main.html  metldata.builtin_transformations.transform_content.assumptions.html  metldata.builtin_transformations.transform_content.config.html  metldata.builtin_transformations.transform_content.data_transform.html  metldata.builtin_transformations.transform_content.html  metldata.builtin_transformations.transform_content.main.html  metldata.builtin_transformations.transform_content.model_transform.html  metldata.html  metldata.transform.base.html  metldata.transform.exceptions.html  metldata.transform.handling.html  metldata.transform.html  metldata.workflow.base.html  (+5 more)
example_data/: test_model.yaml
lock/: requirements-dev-template.in  requirements-dev.in  requirements-dev.txt  requirements.txt
metldata/: __init__.py  __main__.py  cli.py  combined.py  config.py  custom_types.py  event_handling.py  metadata_utils.py
metldata/accession_registry/: __init__.py  accession_handler.py  accession_registry.py  accession_store.py  config.py
metldata/artifacts_rest/: __init__.py  api_factory.py  artifact_dao.py  artifact_info.py  config.py  factory.py  load_resources.py  models.py  query_resources.py
metldata/builtin_transformations/: __init__.py  infer_references.py
metldata/builtin_workflows/: __init__.py  ghga_archive.py
metldata/event_handling/: __init__.py  artifact_events.py  event_handling.py  models.py  submission_events.py
metldata/load/: aggregator.py  api.py  auth.py  client.py  collect.py  config.py  event_publisher.py  load.py  main.py  models.py  stats.py  summary.py
metldata/model_utils/: anchors.py  assumptions.py  config.py  essentials.py  identifieres.py  identifiers.py  manipulate.py  metadata_validator.py  model_validator.py
metldata/reference/: config.py  map.py  path.py  path_elements.py  path_str.py  reference.py
metldata/reference_utils/: path.py  path_elements.py  path_str.py
metldata/shared/: __init__.py  config.py
metldata/submission_registry/: __init__.py  config.py  event_publisher.py  identifiers.py  metadata_validator.py  models.py  submission_registry.py  submission_store.py  utils.py  validation.py
metldata/submission_store/: __init__.py  config.py
metldata/transform/: artifact_publisher.py  base.py  config.py  exceptions.py  handling.py  main.py  models.py  resolve.py  source_event_subscriber.py
metldata/transformations/: __init__.py  models.py  validation.py
my_microservice/: config.py
scripts/: update_readme.py
src/metldata/: __init__.py  __main__.py  cli.py  combined.py  config.py  custom_types.py  metadata_utils.py  py.typed
tests/: __init__.py  conftest.py  test_accession_registry.py  test_event_handling.py  test_event_publisher.py  test_metadata_utils.py  test_reference.py  test_reference_utils.py  test_submission_registry.py  test_submission_store.py  test_validation.py  utils.py
tests/accession_registry/: __init__.py  test_accession_handler.py  test_accession_registry.py  test_accession_store.py
tests/artifact_rest/: __init__.py  test_api_factory.py  test_artifact_info.py  test_factory.py  test_load_artifacts.py  test_query_resources.py
tests/builtin_tranformations/: __init__.py  test_happy.py  test_infer_references.py
tests/builtin_transformations/: __init__.py  test_happy.py  test_unhappy.py
tests/builtin_workflows/: __init__.py  test_happy.py
tests/fixtures/: advanced_model.yaml  annotation.py  artifact_info.py  config.py  (+21 more)
(+766 files in other folders)
