[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metldata"
version = "1.1.0"
description = "metldata - A framework for handling metadata based on ETL, CQRS, and event sourcing."
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "hexkit[akafka,mongodb]~=1.0.0",
    "ghga-service-commons[api,auth]~=1.1.0",
    "ghga-event-schemas~=1.0.0",
    "typer~=0.9.0",
    "linkml==1.6.1",
    "linkml-runtime==1.6.0",
    "linkml-validator==0.4.5",
]

[project.license]
text = "Apache 2.0"

[project.urls]
Repository = "https://github.com/ghga-de/metldata"

[project.scripts]
metldata = "metldata.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]
